# myqgenerador

./: .gitignore  app.py  app_v1.py  pyproject.toml  requirements.txt  test copy.ipynb  test.ipynb  test.py
.claude/: settings.local.json
schemas/: schemas.py
services/: business_case_agent.py  diagram_agent.py  document_extraction.py  icon_tools.py  requirements_agent.py  services.py
services/system_prompt/: business_case_analyst_prompt.md  diagram_prompt.md  requirements_prompt.md
static/css/: style.css
static/js/: editor.js
templates/: index.html
utils/: models_IA.py
