[project]
name = "captura-requisitos"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anthropic==0.117.0",
    "anyio==4.14.2",
    "asttokens==3.0.2",
    "audioop-lts==0.2.2",
    "azure-ai-documentintelligence==1.0.2",
    "azure-core==1.41.0",
    "azure-identity==1.25.3",
    "beautifulsoup4==4.15.0",
    "blinker==1.9.0",
    "bottleneck==1.6.0",
    "certifi==2026.6.17",
    "cffi==2.1.0",
    "cfgv==3.5.0",
    "charset-normalizer==3.4.9",
    "click==8.4.2",
    "cobble==0.1.4",
    "colorama==0.4.6",
    "comm==0.2.3",
    "cryptography==49.0.0",
    "debugpy==1.8.21",
    "decorator==5.3.1",
    "defusedxml==0.7.1",
    "diagrams==0.25.1",
    "distlib==0.4.3",
    "distro==1.9.0",
    "docstring-parser==0.18.0",
    "docx==0.2.4",
    "et-xmlfile==2.0.0",
    "executing==2.2.1",
    "filelock==3.30.2",
    "filetype==1.2.0",
    "flask==3.1.3",
    "google-api-core==2.32.0",
    "google-auth==2.56.0",
    "google-cloud-aiplatform==1.161.0",
    "google-cloud-bigquery==3.42.2",
    "google-cloud-core==2.6.0",
    "google-cloud-resource-manager==1.18.0",
    "google-cloud-storage==3.13.0",
    "google-cloud-vectorsearch==0.11.1",
    "google-crc32c==1.8.0",
    "google-genai==2.11.0",
    "google-resumable-media==2.10.0",
    "googleapis-common-protos==1.75.0",
    "graphviz==0.20.3",
    "greenlet==3.5.4",
    "grpc-google-iam-v1==0.14.4",
    "grpcio==1.82.1",
    "grpcio-status==1.81.1",
    "gunicorn==26.0.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "identify==2.6.19",
    "idna==3.18",
    "ipykernel==7.3.0",
    "ipython==9.15.0",
    "ipython-pygments-lexers==1.1.1",
    "isodate==0.7.2",
    "itsdangerous==2.2.0",
    "jedi==0.20.0",
    "jinja2==3.1.6",
    "jiter==0.16.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jupyter-client==8.9.1",
    "jupyter-core==5.9.1",
    "langchain==1.3.14",
    "langchain-anthropic==1.4.8",
    "langchain-core==1.4.9",
    "langchain-google-genai==4.2.7",
    "langchain-markitdown==0.1.6",
    "langchain-ollama==1.1.0",
    "langchain-openai==1.3.5",
    "langchain-protocol==0.0.18",
    "langchain-text-splitters==1.1.2",
    "langgraph==1.2.9",
    "langgraph-checkpoint==4.1.1",
    "langgraph-prebuilt==1.1.0",
    "langgraph-sdk==0.4.2",
    "langsmith==0.10.5",
    "lxml==6.1.1",
    "mammoth==1.12.0",
    "markdownify==1.2.3",
    "markitdown==0.0.2",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.2",
    "msal==1.37.0",
    "msal-extensions==1.3.1",
    "nest-asyncio2==1.7.2",
    "nodeenv==1.10.0",
    "numexpr==2.14.1",
    "numpy==2.5.1",
    "olefile==0.47",
    "ollama==0.6.2",
    "openai==2.45.0",
    "openpyxl==3.1.5",
    "orjson==3.11.9",
    "ormsgpack==1.12.2",
    "packaging==26.2",
    "pandas==3.0.3",
    "parso==0.8.7",
    "pathvalidate==3.3.1",
    "pdfminer-six==20260107",
    "pillow==12.3.0",
    "platformdirs==4.10.0",
    "pre-commit==4.6.0",
    "prompt-toolkit==3.0.52",
    "proto-plus==1.28.1",
    "protobuf==6.33.6",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "puremagic==2.2.0",
    "pyarrow==23.0.1",
    "pyasn1==0.6.4",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydub==0.25.1",
    "pygments==2.20.0",
    "pyjwt==2.13.0",
    "python-dateutil==2.9.0.post0",
    "python-discovery==1.4.4",
    "python-dotenv==1.2.2",
    "python-pptx==1.0.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "regex==2026.7.10",
    "requests==2.34.2",
    "requests-toolbelt==1.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.9",
    "speechrecognition==3.17.0",
    "stack-data==0.6.3",
    "standard-aifc==3.13.0",
    "standard-chunk==3.13.0",
    "tenacity==9.1.4",
    "tiktoken==0.13.0",
    "tornado==6.5.7",
    "tqdm==4.68.4",
    "traitlets==5.15.1",
    "typing-extensions==4.16.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.3",
    "urllib3==2.7.0",
    "uuid-utils==0.17.0",
    "validators==0.35.0",
    "virtualenv==21.6.1",
    "wcwidth==0.8.2",
    "websockets==15.0.1",
    "werkzeug==3.1.8",
    "xlrd==2.0.2",
    "xlsxwriter==3.2.9",
    "xxhash==3.8.1",
    "youtube-transcript-api==1.2.4",
    "zstandard==0.25.0",
]
